# HarnessFix

./: .env.example  .gitignore  ARTIFACT.md  README.md  requirements.txt  run_pipeline_appworld.py  run_pipeline_gaia.py  run_pipeline_swe.py  run_pipeline_terminal_bench.py
data/: download_terminal_bench.py  pull_swebench_images.sh  sample_appworld.py  sample_appworld_smoke.py  sample_gaia.py  sample_swebench.py  sample_terminal_bench.py  sample_train_test.py  sample_val.py  sample_verified_100.py
discussion/: harness_flaw_patterns.md  token_cost.md
docs/: PAPER_ALIGNMENT.md  diagnosis_annotation.md  motivation_study.md
enhancement_implementation/: config_appworld.yaml  config_gaia.yaml  config_swe.yaml  config_terminal_bench.yaml
eval/: README.md  eval_appworld.py  eval_gaia.py  eval_terminal_bench.py
exp/: README.md  model_configuration.md  rq1_effectiveness.md  rq2_failure_diagnosis.md  rq3_ablation.md  rq4_transfer.md
failure_analysis/: __init__.py  aggregate_results.py  analysis_config_appworld.yaml  analysis_config_gaia.yaml  analysis_config_swe.yaml  analysis_config_terminal_bench.yaml  artifact_sanitizer.py  check_val_gate.py  consolidation.py  explore_task_agent.py  extract_traj_summary.py  harness_memory.py  htir.py  operator_registry.py  plan_diff_audit.py  print_htir_compact.py  print_swe_eval_artifacts.py  (+2 more)
task_agent/open_deep_research/: pyproject.toml  run_gaia_entry.py
task_agent/open_deep_research/src/open_deep_research/: __init__.py  browser.py  tracing.py
task_agent/open_deep_research/src/open_deep_research/scripts/: visual_qa.py
(+74 files in other folders)
